-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0-rc1
-
Windows 7 64 bit
cmake version 3.2.1
- Have cmake in PATH.
- Start Creator with empty settings.
- Go to "Tools" -> "Options..." -> "Build & Run" -> "CMake".
On Linux, CMake from PATH is listed.
On Windows, CMake from PATH is not being listed can't be used by Creator.
Autodetection of CMake should work on Windows as well. This used to work in Creator 3.4.
Found by Squish test tst_cmake_speedcrunch.
For Gerrit Dashboard: QTCREATORBUG-14740 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
121525,7 | Cmake: Fix autodetection of cmake on Windows | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
121760,5 | Cmake: Fix autodetection of cmake on Windows | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |