Cmake: Fix autodetection of cmake on Windows

By using some of the infrastructure in Utils::Environment. Due to
wanting to find all cmake executables in PATH and not just the
first one, we need some custom code.

(cherry picked from commit ca8b43f6c864ca18ca7da78f1dff810afa697119)
Change-Id: If3161d712b9f6e659450a3d0647f83344e68ba5d
Task-number: QTCREATORBUG-14740
Reviewed-by: Robert Loehning <robert.loehning@theqtcompany.com>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>